public/main.css
.positive{
    background-color: lightgreen;
    width: 150px;
    height: 150px;
    display:inline-block;
}

.centered {
    position: fixed;
    top: 50%;
    left: 50%;
    /* bring your own prefixes */
    transform: translate(-50%, -50%);
}

.progress {
  width: 100px;
  height: 100px;
  background: none;
  position: relative;
}

.progress::after {
  content: "";
  width: 100%;
  height: 100%;
  border-radius: 50%;
  border: 6px solid #eee;
  position: absolute;
  top: 0;
  left: 0;
}

.progress>span {
  width: 50%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  top: 0;
  z-index: 1;
}

.progress .progress-left {
  left: 0;
}

.progress .progress-bar {
  width: 100%;
  height: 100%;
  background: none;
  border-width: 6px;
  border-style: solid;
  position: absolute;
  top: 0;
}

.progress .progress-left .progress-bar {
  left: 100%;
  border-top-right-radius: 80px;
  border-bottom-right-radius: 80px;
  border-left: 0;
  -webkit-transform-origin: center left;
  transform-origin: center left;
}

.progress .progress-right {
  right: 0;
}

.progress .progress-right .progress-bar {
  left: -100%;
  border-top-left-radius: 80px;
  border-bottom-left-radius: 80px;
  border-right: 0;
  -webkit-transform-origin: center right;
  transform-origin: center right;
}

.progress .progress-value {
  position: absolute;
  top: 0;
  left: 0;
}

.ranking, .ratings{
    margin-top: 5vh;
}

#enter-review{
    height: 15vh;
}

.thumbs-up{
    color:green;
    font-size:x-large;
}

.thumbs-down{
    color:darkred;
    font-size:x-large;
}

.icon,
.numberreviews{
    float:left;
}

.rating-cat{
    padding-top: 3vh;
    text-align: center;
}

.more-reviews{
    margin:0 auto;
    display:block;
}

